[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/player/stealth_base.png" type="Texture" id=1]
[ext_resource path="res://game/player/Player.gd" type="Script" id=2]
[ext_resource path="res://game/bullets/BulletPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/sfx/player/shoot/03shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://game/player/extras/Trail2D.gd" type="Script" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.233645, 0.588785, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.871094, 0.835365, 0.299438, 1, 0.761719, 0.40736, 0.148773, 1, 0.566406, 0.092926, 0.092926, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -0.0254046, 0, 0, Vector2( 1, 0.000679135 ), -3.12727, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 100, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), 0.0, 1.31058, 0, 0, Vector2( 1, 1 ), 0.701913, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1 )

[node name="Player" type="KinematicBody2D"]
z_index = 50
z_as_relative = false
collision_mask = 2
script = ExtResource( 2 )
speed = 500.0
bullet = ExtResource( 3 )

[node name="Combustion" type="Particles2D" parent="."]
position = Vector2( 0, 32 )
amount = 64
lifetime = 0.1
visibility_rect = Rect2( -20, -20, 40, 40 )
local_coords = false
draw_order = 1
process_material = SubResource( 5 )

[node name="TrailPoint" type="Node2D" parent="."]
position = Vector2( 0, 20 )

[node name="Trail2D" type="Line2D" parent="TrailPoint"]
modulate = Color( 1, 1, 1, 0.407843 )
z_index = -1
points = PoolVector2Array( 0, 25, 0, 0 )
width = 40.0
width_curve = SubResource( 6 )
default_color = Color( 1, 1, 1, 0 )
gradient = SubResource( 7 )
joint_mode = 2
begin_cap_mode = 2
script = ExtResource( 5 )
is_emitting = true
lifetime = 0.2
max_points = 20
target_path = NodePath("..")

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="GunTimer" type="Timer" parent="."]

[node name="ShootPositions" type="Node2D" parent="."]

[node name="Left" type="Position2D" parent="ShootPositions"]
position = Vector2( -14, 4.12035 )

[node name="Right" type="Position2D" parent="ShootPositions"]
position = Vector2( 14, 4.12035 )

[node name="DamageCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -25.0415, 21.4821, 0.0550919, -29.273, 24.2153, 21.2948 )

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "PlayerBullet"
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
